# openalex-research-rag

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  Makefile  README.md  docker-compose.yml  package.json  pyproject.toml
configs/: logging.yaml  search_config.yaml
data/sample/: authors_sample.json  institutions_sample.json  works_sample.json
data/schema/: 001_create_tables.sql  002_extensions.sql  003_reading_list.sql
demo-app/: index.html  package.json
demo-app/src/: main.js
docs/: architecture.md  citation_policy.md  data_card.md  demo_script.md  evaluation.md  model_card.md
docs/deploy/: nginx-openalex.conf
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: config.js
frontend/src/: App.jsx  index.css  main.jsx
notebooks/: 01_eda.ipynb  02_modeling.ipynb
scripts/: deploy_backend.sh  deploy_dothost.sh  e2e_capture.py  fetch_arxiv_pdfs.py  fetch_bulk_data.py  fetch_citation_contexts.py  fetch_sample_data.py  tunnel_llama.sh  warmup_demo.py
src/api/: dependencies.py  main.py  state.py
src/app/: _api.py  streamlit_app.py
src/evaluation/: metrics.py  run_evaluation.py  test_queries.py
src/features/: bm25_index.py  build_index.py  concept_graph.py  embeddings.py
src/ingestion/: arxiv_pdf_fetcher.py  bulk_fetcher.py  db_writer.py  openalex_client.py  pipeline.py  sample_loader.py  schema.py  semantic_scholar_client.py
src/models/: rag_pipeline.py  reranker.py
tests/: conftest.py  test_api.py  test_citation_graph.py  test_openalex_loader.py  test_rag_grounding.py  test_search.py
(+97 files in other folders)
