[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openalex-research-rag"
version = "0.1.0"
description = "OpenAlex Research Intelligence — scholarly paper search, citation graph, and RAG platform"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=0.10.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "streamlit>=1.35.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "chromadb>=0.5.0",
    "polars>=0.20.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "joblib>=1.4.0",
    "tqdm>=4.66.0",
    "PyYAML>=6.0.1",
    "plotly>=5.22.0",
    "networkx>=3.3",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "pyarrow>=14.0.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "jupyter>=1.1.1",
    "nbformat>=5.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
